# HMB_contraception

./: .gitignore  CHANGELOG.md  CHANGES_SUMMARY.md  HMB intervention package - explore parameter sweep.ipynb  HMB_state.py  README.md  RELEASE_NOTES_v0.4.0.md  VERSION  analyze_cascade_impact.py  analyzers.py  component_analysis.py  education.py  gitignore.txt  hiud_acceptance.py  interventions-v2.py  interventions.py  menstruation.py  plot_analysis.py  plot_sim.py  pyproject.toml  requirements.txt  run_analysis.py  run_anemia_risk_sensitivity.py  run_baseline.py  run_care_hiud_sensitivity.py  run_care_rate_sensitivity.py  run_care_sensitivity.py  run_care_sensitivity2.py  run_cascade.py  run_component_analysis.py  run_kenya.py  run_kenya_nsaid_added.py  run_kenya_package.py  run_kenya_package_extended.py  run_sensitivity_analysis.py  test_run.py  test_run_intervention_pathway.py  tests.py  utils.py
results_stochastic_extended/: kenya_package_base_seed0.sim  kenya_package_base_seed1.sim  kenya_package_base_seed10.sim  kenya_package_base_seed2.sim  kenya_package_base_seed3.sim  kenya_package_base_seed4.sim  kenya_package_base_seed5.sim  kenya_package_base_seed6.sim  kenya_package_base_seed7.sim  kenya_package_base_seed8.sim  kenya_package_base_seed9.sim  kenya_package_hiud-100_seed0.sim  kenya_package_hiud-100_seed1.sim  kenya_package_hiud-20_seed0.sim  kenya_package_hiud-20_seed1.sim  kenya_package_hiud-20_seed10.sim  kenya_package_hiud-20_seed2.sim  kenya_package_hiud-20_seed3.sim  kenya_package_hiud-20_seed4.sim  kenya_package_hiud-20_seed5.sim  kenya_package_hiud-20_seed6.sim  kenya_package_hiud-20_seed7.sim  kenya_package_hiud-20_seed8.sim  kenya_package_hiud-20_seed9.sim  kenya_package_hiud-25_seed0.sim  kenya_package_hiud-25_seed1.sim  kenya_package_hiud-40_seed0.sim  kenya_package_hiud-40_seed1.sim  (+86 more)
tests/: README.md  (+2 more)
